--- a/src/epub/text/a-losing-game.xhtml
+++ b/src/epub/text/a-losing-game.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="a-losing-game" epub:type="se:short-story">
+		<article id="a-losing-game" epub:type="se:short-story">
 			<h2 epub:type="title">A Losing Game</h2>
 			<p>Once in a tavern Man met face to skull with Death. Man entered gaily but Death gave no greeting, he sat with his jowl morosely over an ominous wine.</p>
 			<p>“Come, come,” said Man, “we have been antagonists long, and if I were losing yet I should not be surly.”</p>
@@ -16,6 +16,6 @@
 			<p>But Man hated gloom either in beast or god, and it made him unhappy to see his adversary’s discomfort, all the more because he was the cause, and still he tried to cheer him.</p>
 			<p>“Have you not slain the Dinatherium?” he said. “Have you not put out the Moon? Why! you will beat me yet.”</p>
 			<p>And with a dry and barking sound Death wept and nothing said; and presently Man arose and went wondering away; for he knew not if Death wept out of pity for his opponent, or because he knew that he should not have such sport again when the old game was over and Man was gone, or whether because perhaps, for some hidden reason, he could never repeat on Earth his triumph over the Moon.</p>
-		</section>
+		</article>
 	</body>
 </html>
