--- a/src/epub/text/a-moral-little-tale.xhtml
+++ b/src/epub/text/a-moral-little-tale.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="a-moral-little-tale" epub:type="se:short-story">
+		<article id="a-moral-little-tale" epub:type="se:short-story">
 			<h2 epub:type="title">A Moral Little Tale</h2>
 			<p>There was once an earnest Puritan who held it wrong to dance. And for his principles he labored hard, his was a zealous life. And there loved him all of those who hated the dance; and those that loved the dance respected him too; they said “He is a pure, good man and acts according to his lights.”</p>
 			<p>He did much to discourage dancing and helped to close several<br/>
@@ -27,6 +27,6 @@
 			<p>“Then,” said the man, “I have mistaken right for wrong; but as soon as I wake I will fight you yet.”</p>
 			<p>“O, no you don’t,” said the Devil. “You don’t wake up out of this sleep.”</p>
 			<p>And somewhere far away Hell’s black steel doors were opened, and arm in arm those two were drawn within, and the doors shut behind them and still they went arm in arm, trudging further and further into the deeps of Hell, and it was that Puritan’s punishment to know that those that he cared for on Earth would do evil as he had done.</p>
-		</section>
+		</article>
 	</body>
 </html>
