--- a/src/epub/text/after-the-fire.xhtml
+++ b/src/epub/text/after-the-fire.xhtml
@@ -6,11 +6,11 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="after-the-fire" epub:type="se:short-story">
+		<article id="after-the-fire" epub:type="se:short-story">
 			<h2 epub:type="title">After the Fire</h2>
 			<p>When that happened which had been so long in happening and the world hit a black, uncharted star, certain tremendous creatures out of some other world came peering among the cinders to see if there were anything there that it were worth while to remember. They spoke of the great things that the world was known to have had; they mentioned the mammoth. And presently they saw man’s temples, silent and windowless, staring like empty skulls.</p>
 			<p>“Some great thing has been here,” one said, “in these huge places.” “It was the mammoth,” said one. “Something greater than he,” said another.</p>
 			<p>And then they found that the greatest thing in the world had been the dreams of man.</p>
-		</section>
+		</article>
 	</body>
 </html>
