--- a/src/epub/text/charon.xhtml
+++ b/src/epub/text/charon.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="charon" epub:type="se:short-story">
+		<article id="charon" epub:type="se:short-story">
 			<h2 epub:type="title">Charon</h2>
 			<p>Charon leaned forward and rowed. All things were one with his weariness.</p>
 			<p>It was not with him a matter of years or of centuries, but of wide floods of time, and an old heaviness and a pain in the arms that had become for him part of the scheme that the gods had made and was of a piece with Eternity.</p>
@@ -22,6 +22,6 @@
 			little shadow spoke, that had been a man.<br/></p>
 			<p>“I am the last,” he said.</p>
 			<p>No one had ever made Charon smile before, no one before had ever made him weep.</p>
-		</section>
+		</article>
 	</body>
 </html>
