--- a/src/epub/text/furrow-maker.xhtml
+++ b/src/epub/text/furrow-maker.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="furrow-maker" epub:type="se:short-story">
+		<article id="furrow-maker" epub:type="se:short-story">
 			<h2 epub:type="title">Furrow-Maker</h2>
 			<p>He was all in black, but his friend was dressed in brown, members of two old families.</p>
 			<p>“Is there any change in the way you build your houses?” said he in black.</p>
@@ -34,6 +34,6 @@
 			<p>“He will die,” said the brown one.</p>
 			<p>“Caw,” said the other.</p>
 			<p>And Man said in his heart: “Just one invention more. There is something I want to do with petrol yet, and then I will give it all up and go back to the woods.”</p>
-		</section>
+		</article>
 	</body>
 </html>
