--- a/src/epub/text/lobster-salad.xhtml
+++ b/src/epub/text/lobster-salad.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="lobster-salad" epub:type="se:short-story">
+		<article id="lobster-salad" epub:type="se:short-story">
 			<h2 epub:type="title">Lobster Salad</h2>
 			<p>I was climbing round the perilous outside of the Palace of Colquonhombros. So far below me that in the tranquil twilight and clear air of those lands I could only barely see them lay the craggy tops of the mountains.</p>
 			<p>It was along no battlements or terrace edge I was climbing, but on the sheer face of the wall itself, getting what foothold I could where the boulders joined.</p>
@@ -16,6 +16,6 @@
 			<p>It is strange what different sensations there can be in different boulders⁠—every one gleaming with the same white light and every one chosen to match the rest by minions of ancient kings⁠—when your life depends on the edges of every one you come to. Those edges seemed strangely different. It was of no avail to overcome the terror of one, for the next would give you a hold in quite a different way or hand you over to death in a different manner. Some were too sharp to hold and some too flush with the wall, those whose hold was the best crumbled the soonest; each rock had its different terror: and then there were those things that followed behind me.</p>
 			<p>And at last I came to a breach made long ago by earthquake, lightning or war: I should have had to go down a thousand feet to get round it and they would come up with me while I was doing that, for certain sable apes that I have not mentioned as yet, things that had tigerish teeth and were born and bred on that wall, had pursued me all the evening. In any case I could have gone no farther, nor did I know what the king would do along whose wall I was climbing. It was time to drop and be done with it or stop and await those apes.</p>
 			<p>And then it was that I remembered a pin, thrown carelessly down out of an evening-tie in another world to the one where grew that glittering wall, and lying now if no evil chance had removed it on a chest of drawers by my bed. The apes were very close, and hurrying, for they knew my fingers were slipping, and the cruel peaks of those infernal mountains seemed surer of me than the apes. I reached out with a desperate effort of will towards where the pin lay on the chest of drawers. I groped about. I found it! I ran it into my arm. Saved!</p>
-		</section>
+		</article>
 	</body>
 </html>
