--- a/src/epub/text/nature-and-time.xhtml
+++ b/src/epub/text/nature-and-time.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="nature-and-time" epub:type="se:short-story">
+		<article id="nature-and-time" epub:type="se:short-story">
 			<h2 epub:type="title">Nature and Time</h2>
 			<p>Through the streets of Coventry one winter’s night strode a triumphant spirit. Behind him stooping, unkempt, utterly ragged, wearing the clothes and look that outcasts have, whining, weeping, reproaching, an ill-used spirit tried to keep pace with him. Continually she plucked him by the sleeve and cried out to him as she panted after and he strode resolute on.</p>
 			<p>It was a bitter night, yet it did not seem to be the cold that she feared, ill-clad though she was, but the trams and the ugly shops and the glare of the factories, from which she continually winced as she hobbled on, and the pavement hurt her feet.</p>
@@ -19,6 +19,6 @@
 			<p>“When have I ever forgotten you?” he said, “or when forsaken you ever? Did I not throw down Babylon for you? And is not Nineveh gone? Where is Persepolis that troubled you? Where Tarshish and Tyre? And you have said I forget you.”</p>
 			<p>And at this she seemed to take a little comfort. I heard her speak once more, looking wistfully at her companion. “When will the fields come back and the grass for my children?”</p>
 			<p>“Soon, soon,” he said: then they were silent. And he strode away, she limping along behind him, and all the clocks in the towers chimed as he passed.</p>
-		</section>
+		</article>
 	</body>
 </html>
