--- a/src/epub/text/roses.xhtml
+++ b/src/epub/text/roses.xhtml
@@ -6,11 +6,11 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="roses" epub:type="se:short-story">
+		<article id="roses" epub:type="se:short-story">
 			<h2 epub:type="title">Roses</h2>
 			<p>I know a roadside where the wild rose blooms with a strange abundance. There is a beauty in the blossoms too of an almost exotic kind, a taint of deeper pink that shocks the Puritan flowers. Two hundred generations ago (generations, I mean, of roses) this was a village street; there was a floral decadence when they left their simple life and the roses came from the wilderness to clamber round houses of men.</p>
 			<p>Of all the memories of that little village, of all the cottages that stood there, of all the men and women whose homes they were, nothing remains but a more beautiful blush on the faces of the roses.</p>
 			<p>I hope that when London is clean passed away and the defeated fields come back again, like an exiled people returning after a war, they may find some beautiful thing to remind them of it all; because we have loved a little that swart old city.</p>
-		</section>
+		</article>
 	</body>
 </html>
