--- a/src/epub/text/taking-up-picadilly.xhtml
+++ b/src/epub/text/taking-up-picadilly.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="taking-up-picadilly" epub:type="se:short-story">
+		<article id="taking-up-picadilly" epub:type="se:short-story">
 			<h2 epub:type="title">Taking Up Picadilly</h2>
 			<p>Going down Picadilly one day and nearing Grosvenor Place I saw, if my memory is not at fault, some workmen with their coats off⁠—or so they seemed. They had pickaxes in their hands and wore corduroy trousers and that little leather band below the knee that goes by the astonishing name of “York-to-London.”</p>
 			<p>They seemed to be working with peculiar vehemence, so that I stopped and asked one what they were doing.</p>
@@ -20,6 +20,6 @@
 			<p>And then I looked at the bit that they had already picked, and though it was broad daylight over my head it was darkness down there, all full of the southern stars.</p>
 			<p>“It was noisy and bad and we grew aweary of it,” said he that wore corduroy trousers. “We are not what we appear.”</p>
 			<p>They were taking up Picadilly altogether.</p>
-		</section>
+		</article>
 	</body>
 </html>
