--- a/src/epub/text/the-city.xhtml
+++ b/src/epub/text/the-city.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-city" epub:type="se:short-story">
+		<article id="the-city" epub:type="se:short-story">
 			<h2 epub:type="title">The City</h2>
 			<p>In time as well as space my fancy roams far from here. It led me once to the edge of certain cliffs that were low and red and rose up out of a desert: a little way off in the desert there was a city. It was evening, and I sat and watched the city.</p>
 			<p>Presently I saw men by threes and fours come softly stealing out of that city’s gate to the number of about twenty. I heard the hum of men’s voices speaking at evening.</p>
@@ -17,6 +17,6 @@
 			<p>He said: “It must be some doom that is going to fall on the city, something has warned them and they have stolen away. Nothing may warn the people.”</p>
 			<p>I heard the wrangling voices, glad with commerce, rise up from the city. And then I also departed, for there was an ominous look on the face of the sky.</p>
 			<p>And only a thousand years later I passed that way, and there was nothing, even among the weeds, of what had been that city.</p>
-		</section>
+		</article>
 	</body>
 </html>
