--- a/src/epub/text/the-demagogue-and-the-demimonde.xhtml
+++ b/src/epub/text/the-demagogue-and-the-demimonde.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-demagogue-and-the-demimonde" epub:type="se:short-story">
+		<article id="the-demagogue-and-the-demimonde" epub:type="se:short-story">
 			<h2 epub:type="title">The Demagogue and the Demimonde</h2>
 			<p>A demagogue and a demimondaine chanced to arrive together at the gate of Paradise. And the Saint looked sorrowfully at them both.</p>
 			<p>“Why were you a demagogue?” he said to the first.</p>
@@ -16,6 +16,6 @@
 			<p>And after some moments’ thought the Saint said: “Well, come in; though you don’t deserve to.”</p>
 			<p>But to the demagogue he said: “We genuinely regret that the limited space at our disposal and our unfortunate lack of interest in those Questions that you have gone so far to inculate and have so ably upheld in the past, prevent us from giving you the support for which you seek.”</p>
 			<p>And he shut the golden door.</p>
-		</section>
+		</article>
 	</body>
 </html>
