--- a/src/epub/text/the-dream-of-king-karna-vootra.xhtml
+++ b/src/epub/text/the-dream-of-king-karna-vootra.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-dream-of-king-karna-vootra" epub:type="se:short-story">
+		<article id="the-dream-of-king-karna-vootra" epub:type="se:short-story">
 			<h2 epub:type="title">The Dream of King Karna-Vootra</h2>
 			<p>King Karna-Vootra sitting on his throne commanding all things said: “I very clearly saw last night the queenly Vava-Nyria. Though partly she was hidden by great clouds that swept continually by her, rolling over and over, yet her face was unhidden and shone, being full of moonlight.</p>
 			<p>“I said to her:</p>
@@ -15,6 +15,6 @@
 			<p>“ ‘And the heralds passing thence shall come even to Ingra, to Ingra where they dance. And there they shall tell of thee, so that thy name long hence shall be sung in that joyous city. And there they shall borrow camels and pass over the sands and go by desert ways to distant Nirid to tell of thee to the lonely men in the mountain monasteries.</p>
 			<p>“ ‘Come with me even now for it is Spring.’ ”</p>
 			<p>“And as I said this she faintly yet perceptibly shook her head. And it was only then I remembered my youth was gone, and she dead forty years.”</p>
-		</section>
+		</article>
 	</body>
 </html>
