--- a/src/epub/text/the-guest.xhtml
+++ b/src/epub/text/the-guest.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-guest" epub:type="se:short-story">
+		<article id="the-guest" epub:type="se:short-story">
 			<h2 epub:type="title">The Guest</h2>
 			<p>A young man came into an ornate restaurant at eight o’clock in<br/>
 			London.<br/></p>
@@ -26,6 +26,6 @@
 			<p>The waiter brought the coffee, and the young man dropped a tabloid of some sort into his cup.</p>
 			<p>“I don’t suppose you come here very often,” he went on. “Well, you probably want to be going. I haven’t taken you much out of your way, there is plenty for you to do in London.”</p>
 			<p>Then having drunk his coffee he fell on to the floor by a foot of the empty chair, and a doctor who was dining in the room bent over him and announced to the anxious manager the visible presence of the young man’s guest.</p>
-		</section>
+		</article>
 	</body>
 </html>
