--- a/src/epub/text/the-hen.xhtml
+++ b/src/epub/text/the-hen.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-hen" epub:type="se:short-story">
+		<article id="the-hen" epub:type="se:short-story">
 			<h2 epub:type="title">The Hen</h2>
 			<p>All along the farmyard gables the swallows sat a-row, twittering uneasily to one another, telling of many things, but thinking only of Summer and the South, for Autumn was afoot and the North wind waiting.</p>
 			<p>And suddenly one day they were all quite gone. And everyone spoke of the swallows and the South.</p>
@@ -22,6 +22,6 @@
 			<p>“We have been to the South,” they said, “and the valleys beyond the sea.”</p>
 			<p>But the poultry would not agree that there was a sea in the South:<br/>
 			“You should hear our hen,” they said.<br/></p>
-		</section>
+		</article>
 	</body>
 </html>
