--- a/src/epub/text/the-lonely-idol.xhtml
+++ b/src/epub/text/the-lonely-idol.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-lonely-idol" epub:type="se:short-story">
+		<article id="the-lonely-idol" epub:type="se:short-story">
 			<h2 epub:type="title">The Lonely Idol</h2>
 			<p>I had from a friend an old outlandish stone, a little swine-faced idol to whom no one prayed.</p>
 			<p>And when I saw his melancholy case as he sat cross-legged at receipt of prayer, holding a little scourge that the years had broken (and no one heeded the scourge and no one prayed and no one came with squealing sacrifice; and he had been a god), then I took pity on the little forgotten thing and prayed to it as perhaps they prayed long since, before the coming of the strange dark ships, and humbled myself and said:</p>
@@ -17,6 +17,6 @@
 			<p>“All that is beautiful he crushes down as a big man tramples daises, all that is fairest. How very fair are the little children of men. It is autumn with all the world, and the stars weep to see it.</p>
 			<p>“Therefore no longer be the friend of Time, who will not let us be, and be not good to him but pity us, and let lovely things live on for the sake of our tears.”</p>
 			<p>Thus prayed I out of compassion one windy day to the snout-faced idol to whom no one kneeled.</p>
-		</section>
+		</article>
 	</body>
 </html>
