--- a/src/epub/text/the-messengers.xhtml
+++ b/src/epub/text/the-messengers.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-messengers" epub:type="se:short-story">
+		<article id="the-messengers" epub:type="se:short-story">
 			<h2 epub:type="title">The Messengers</h2>
 			<p>One wandering nigh Parnassus chasing hares heard the high Muses.</p>
 			<p>“Take us a message to the Golden Town.”</p>
@@ -39,6 +39,6 @@
 			<p>And I said: “I will not go. None will believe me.”</p>
 			<p>And still the Muses cry to me all night long.</p>
 			<p>They do not understand. How should they know?</p>
-		</section>
+		</article>
 	</body>
 </html>
