--- a/src/epub/text/the-poet-speaks-with-earth.xhtml
+++ b/src/epub/text/the-poet-speaks-with-earth.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-mist" epub:type="se:short-story">
+		<article id="the-mist" epub:type="se:short-story">
 			<h2 epub:type="title">The Poet Speaks with Earth<a href="endnotes.xhtml#note-2" id="noteref-2" epub:type="noteref">2</a></h2>
 			<p>Returning late one night from roaming amongst the stars I came on Mother Earth sitting all dark in Space, murmuring tales of her children.</p>
 			<p>“Dreams and battles,” she said. “Dreams and battles.” I heard her say nothing more.</p>
@@ -16,6 +16,6 @@
 			<p>No, she remembered nothing, but muttered of poets and heroes. Not even mention of our Parliament moved her.</p>
 			<p>“Dreams and battles,” she said. “Dreams and battles,” and fell to muttering poems and crooning of ancient wars.</p>
 			<p>Mother, Mother, you shall remember us.</p>
-		</section>
+		</article>
 	</body>
 </html>
