--- a/src/epub/text/the-raft-builders.xhtml
+++ b/src/epub/text/the-raft-builders.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-raft-builders" epub:type="se:short-story">
+		<article id="the-raft-builders" epub:type="se:short-story">
 			<h2 epub:type="title">The Raft-Builders</h2>
 			<p>All we who write put me in mind of sailors hastily making rafts upon doomed ships.</p>
 			<p>When we break up under the heavy years and go down into eternity with all that is ours our thoughts like small lost rafts float on awhile upon Oblivion’s sea. They will not carry much over those tides, our names and a phrase or two and little else.</p>
@@ -16,6 +16,6 @@
 			<p>For the rest I dimly see the forms of foundered ships on the sea-floor strewn with crowns.</p>
 			<p>Our ships were all unseaworthy from the first.</p>
 			<p>There goes the raft that Homer made for Helen.</p>
-		</section>
+		</article>
 	</body>
 </html>
