--- a/src/epub/text/the-return-of-the-exiles.xhtml
+++ b/src/epub/text/the-return-of-the-exiles.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-return-of-the-exiles" epub:type="se:short-story">
+		<article id="the-return-of-the-exiles" epub:type="se:short-story">
 			<h2 epub:type="title">The Return of the Exiles</h2>
 			<p>The old man with a hammer and the one-eyed man with a spear were seated by the roadside talking as I came up the hill.</p>
 			<p>“It isn’t as though they hadn’t asked us,” the one with the hammer said.</p>
@@ -24,6 +24,6 @@
 			<p>And the twenty men began looking uneasily at each other, and the plaint of the one-eyed man went on in that tearful voice, and all of a sudden they all looked at me. I do not know who the two old men were or what any of them were doing, but there are moments when it is clearly time to go, and I left them there and then. And just as I got up on to my bicycle I heard the plaintive voice of the one with the hammer apologizing for the liberty he had taken in coming back to Stonehenge.</p>
 			<p>“But after all these years,” I heard him crying, “After all these years.⁠ ⁠…”</p>
 			<p>And the one with the spear said: “Yes, after three thousand years.⁠ ⁠…”</p>
-		</section>
+		</article>
 	</body>
 </html>
