--- a/src/epub/text/the-reward.xhtml
+++ b/src/epub/text/the-reward.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-reward" epub:type="se:short-story">
+		<article id="the-reward" epub:type="se:short-story">
 			<h2 epub:type="title">The Reward</h2>
 			<p>One’s spirit goes further in dreams than it does by day. Wandering once by night from a factory city I came to the edge of Hell.</p>
 			<p>The place was foul with cinders and cast-off things, and jagged, half-buried things with shapeless edges, and there was a huge angel with a hammer building in plaster and steel. I wondered what he did in that dreadful place. I hesitated, then asked him what he was building. “We are adding to Hell,” he said, “to keep pace with the times.” “Don’t be too hard on them,” I said, for I had just come out of a compromising age and a weakening country. The angel did not answer. “It won’t be as bad as the old hell, will it?” I said. “Worse,” said the angel.</p>
@@ -21,6 +21,6 @@
 			<p>“It is very hard to prove,” I said, “that the yeast is as bad as you think.”</p>
 			<p>“After all,” I said, “they must live.”</p>
 			<p>And the angel made no answer but went on building his hell.</p>
-		</section>
+		</article>
 	</body>
 </html>
