--- a/src/epub/text/the-song-of-the-blackbird.xhtml
+++ b/src/epub/text/the-song-of-the-blackbird.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-song-of-the-blackbird" epub:type="se:short-story">
+		<article id="the-song-of-the-blackbird" epub:type="se:short-story">
 			<h2 epub:type="title">The Song of the Blackbird</h2>
 			<p>As the poet passed the thorn-tree the blackbird sang.</p>
 			<p>“How ever do you do it?” the poet said, for he knew bird language.</p>
@@ -14,6 +14,6 @@
 			<p>“Yes, the song came in a moment, and as I was saying.⁠ ⁠…”</p>
 			<p>And an old wanderer walking with a stick came by and the blackbird flew away, and the poet told the old man the blackbird’s wonderful story.</p>
 			<p>“That song new?” said the wanderer. “Not a bit of it. God made it years ago. All the blackbirds used to sing it when I was young. It was new then.”</p>
-		</section>
+		</article>
 	</body>
 </html>
