--- a/src/epub/text/the-sphinx-at-giza.xhtml
+++ b/src/epub/text/the-sphinx-at-giza.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-sphinx-at-giza" epub:type="se:short-story">
+		<article id="the-sphinx-at-giza" epub:type="se:short-story">
 			<h2 epub:type="title">The Sphinx at Giza</h2>
 			<p>I saw the other day the Sphinx’s painted face.</p>
 			<p>She had painted her face in order to ogle Time.</p>
@@ -28,6 +28,6 @@
 			<p>We will shut him up in the Pyramid of Cheops, in the great chamber where the sarcophagus is. Thence we will lead him out when we give our feasts. He shall ripen our corn for us and do menial work.</p>
 			<p>We will kiss they painted face, O Sphinx, if thou wilt betray to us Time.</p>
 			<p>And yet I fear that in his ultimate anguish he may take hold blindly of the world and the moon, and slowly pull down upon him the House of Man.</p>
-		</section>
+		</article>
 	</body>
 </html>
