--- a/src/epub/text/the-sphinx-in-thebes-massachusetts.xhtml
+++ b/src/epub/text/the-sphinx-in-thebes-massachusetts.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-sphinx-in-thebes-massachusetts" epub:type="se:short-story">
+		<article id="the-sphinx-in-thebes-massachusetts" epub:type="se:short-story">
 			<h2 epub:type="title">The Sphinx in Thebes (Massachusetts)</h2>
 			<p>There was a woman in a steel-built city who had all that money could buy, she had gold and dividends and trains and houses, and she had pets to play with, but she had no sphinx.</p>
 			<p>So she besought them to bring her a live sphinx; and therefore they went to the menageries, and then to the forests and the desert places, and yet could find no sphinx.</p>
@@ -17,6 +17,6 @@
 			<p>And the woman was very glad that she owned a sphinx: but the sphinx stared long into her eyes one day, and softly asked a riddle of the woman.</p>
 			<p>And the woman could not answer, and she died.</p>
 			<p>And the sphinx is silent again and none knows what she will do.</p>
-		</section>
+		</article>
 	</body>
 </html>
