--- a/src/epub/text/the-storm.xhtml
+++ b/src/epub/text/the-storm.xhtml
@@ -6,16 +6,16 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-storm" epub:type="se:short-story">
+		<article id="the-storm" epub:type="se:short-story">
 			<h2 epub:type="title">The Storm</h2>
-			<p>They saw a little ship that was far at sea and that went by the name of the <i>Petite Espérance</i>. And because of its uncouth rig and its lonely air and the look that it had of coming from strangers’ lands they said: “It is neither a ship to greet nor desire, nor yet to succor when in the hands of the sea.”</p>
+			<p>They saw a little ship that was far at sea and that went by the name of the <i epub:type="se:name.vessel.ship" xml:lang="fr">Petite Espérance</i>. And because of its uncouth rig and its lonely air and the look that it had of coming from strangers’ lands they said: “It is neither a ship to greet nor desire, nor yet to succor when in the hands of the sea.”</p>
 			<p>And the sea rose up as is the wont of the sea and the little ship from afar was in his hands, and frailer than ever seemed its feeble masts with their sails of fantastic cut and their alien flags. And the sea made a great and very triumphing voice, as the sea doth. And then there arose a wave that was very strong, even the ninth-born son of the hurricane and the tide, and hid the little ship and hid the whole of the far parts of the sea. Thereat said those who stood on the good dry land:</p>
 			<p>“ ’Twas but a little, worthless alien ship and it is sunk at sea, and it is good and right that the storm have spoil.” And they turned and watched the course of the merchantmen, laden with silver and appeasing spice; year after year they cheered them into port and praised their goods and their familiar sails. And many years went by.</p>
 			<p>And at last with decks and bulwarks covered with cloth of gold; with age-old parrots that had known the troubadours, singing illustrious songs and preening their feathers of gold; with a hold full of emeralds and rubies; all silken with Indian loot; furling as it came in its way-worn alien sails, a galleon glided into port, shutting the sunlight from the merchantmen: and lo! it loomed the equal of the cliffs.</p>
 			<p>“Who are you?” they asked, “far-travelled wonderful ship?”</p>
-			<p>And they said: “The <i>Petite Espérance</i>.”</p>
+			<p>And they said: “The <i epub:type="se:name.vessel.ship" xml:lang="fr">Petite Espérance</i>.”</p>
 			<p>“O,” said the people on shore. “We thought you were sunk at sea.”</p>
 			<p>“Sunk at sea?” sang the sailors. “We could not be sunk at sea⁠—we had the gods on board.”</p>
-		</section>
+		</article>
 	</body>
 </html>
