--- a/src/epub/text/the-three-tall-sons.xhtml
+++ b/src/epub/text/the-three-tall-sons.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-three-tall-sons" epub:type="se:short-story">
+		<article id="the-three-tall-sons" epub:type="se:short-story">
 			<h2 epub:type="title">The Three Tall Sons</h2>
 			<p>And at last Man raised on high the final glory of his civilization, the towering edifice of the ultimate city.</p>
 			<p>Softly beneath him in the deeps of the earth purred his machinery fulfilling all his needs, there was no more toil for man. There he sat at ease discussing the Sex Problem.</p>
@@ -19,6 +19,6 @@
 			<p>And these are Nature’s sons, the forlorn one’s terrible children,<br/>
 			War, Famine and Plague.<br/></p>
 			<p>Yea and they went in there and found Man unawares in his city still poring over his Problems, obsessed with his civilization, and never hearing their tread as those three came up behind.</p>
-		</section>
+		</article>
 	</body>
 </html>
