--- a/src/epub/text/the-true-history-of-the-hare-and-the-toroise.xhtml
+++ b/src/epub/text/the-true-history-of-the-hare-and-the-toroise.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-true-history-of-the-hare-and-the-toroise" epub:type="se:short-story">
+		<article id="the-true-history-of-the-hare-and-the-toroise" epub:type="se:short-story">
 			<h2 epub:type="title">The True History of the Hare and the Tortoise</h2>
 			<p>For a long time there was doubt with acrimony among the beasts as to whether the Hare or the Tortoise could run the swifter. Some said the Hare was the swifter of the two because he had such long ears, and others said the Tortoise was the swifter because anyone whose shell was so hard as that should be able to run hard too. And lo, the forces of estrangement and disorder perpetually postponed a decisive contest.</p>
 			<p>But when there was nearly war among the beasts, at last an arrangement was come to and it was decided that the Hare and the Tortoise should run a race of five hundred yards so that all should see who was right.</p>
@@ -33,6 +33,6 @@
 			<p>“Run hard. Run hard,” shouted his backers. “Hard shell and hard living: that’s what has done it.” And then they asked the Tortoise what his achievement signified, and he went and asked the Turtle. And the Turtle said, “It is a glorious victory for the forces of swiftness.” And then the Tortoise repeated it to his friends. And all the beasts said nothing else for years. And even to this day, “a glorious victory for the forces of swiftness” is a catchphrase in the house of the snail.</p>
 			<p>And the reason that this version of the race is not widely known is that very few of those that witnessed it survived the great forest-fire that happened shortly after. It came up over the weald by night with a great wind. The Hare and the Tortoise and a very few of the beasts saw it far off from a high bare hill that was at the edge of the trees, and they hurriedly called a meeting to decide what messenger they should send to warn the beasts in the forest.</p>
 			<p>They sent the Tortoise.</p>
-		</section>
+		</article>
 	</body>
 </html>
