--- a/src/epub/text/the-unpasturable-fields.xhtml
+++ b/src/epub/text/the-unpasturable-fields.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-unpasturable-fields" epub:type="se:short-story">
+		<article id="the-unpasturable-fields" epub:type="se:short-story">
 			<h2 epub:type="title">The Unpasturable Fields</h2>
 			<p>Thus spake the mountains: “Behold us, even us; the old ones, the grey ones, that wear the feet of Time. Time on our rocks shall break his staff and stumble: and still we shall sit majestic, even as now, hearing the sound of the sea, our old coeval sister, who nurses the bones of her children and weeps for the things she has done.</p>
 			<p>“Far, far, we stand above all things; befriending the little cities until they grow old and leave us to go among the myths.</p>
@@ -15,6 +15,6 @@
 			<p>“Ye pass away,” said the mountains.</p>
 			<p>And the clouds answered, as I dreamed or fancied,</p>
 			<p>“We pass away, indeed we pass away, but upon our unpasturable fields Pegasus prances. Here Pegasus gallops and browses upon song which the larks bring to him every morning from far terrestrial fields. His hoof-beats ring upon our slopes at sunrise as though our fields were of silver. And breathing the dawn-wind in dilated nostrils, with head tossed upwards and with quivering wings, he stands and stares from our tremendous heights, and snorts and sees far-future wonderful wars rage in the creases and the folds of the togas that cover the knees of the gods.”</p>
-		</section>
+		</article>
 	</body>
 </html>
