--- a/src/epub/text/a-mistaken-identity.xhtml
+++ b/src/epub/text/a-mistaken-identity.xhtml
@@ -6,13 +6,13 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="a-mistaken-identity" epub:type="se:short-story">
+		<article id="a-mistaken-identity" epub:type="se:short-story">
 			<h2 epub:type="title">A Mistaken Identity</h2>
 			<p>Fame as she walked at evening in a city saw the painted face of Notoriety flaunting beneath a gas-lamp, and many kneeled unto her in the dirt of the road.</p>
 			<p>“Who are you?” Fame said to her.</p>
 			<p>“I am Fame,” said Notoriety.</p>
 			<p>Then Fame stole softly away so that no one knew she had gone.</p>
 			<p>And Notoriety presently went forth and all her worshippers rose and followed after, and she led them, as was most meet, to her native Pit.</p>
-		</section>
+		</article>
 	</body>
 </html>
