--- a/src/epub/text/alone-the-immortals.xhtml
+++ b/src/epub/text/alone-the-immortals.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="alone-the-immortals" epub:type="se:short-story">
+		<article id="alone-the-immortals" epub:type="se:short-story">
 			<h2 epub:type="title">Alone the Immortals</h2>
 			<p>I heard it said that far away from here, on the wrong side of the deserts of Cathay and in a country dedicate to winter, are all the years that are dead. And there a certain valley shuts them in and hides them, as rumor has it, from the world, but not from the sight of the moon nor from those that dream in his rays.</p>
 			<p>And I said: I will go from here by ways of dream and I will come to that valley and enter in and mourn there for the good years that are dead. And I said: I will take a wreath, a wreath of mourning, and lay it at their feet in token of my sorrow for their dooms.</p>
@@ -16,8 +16,8 @@
 			<p>I said: “Who are those?”</p>
 			<p>One answered: “Alone the Immortals.”</p>
 			<p>And I said sadly: “I came not to see dread gods, but I came to shed my tears and to offer flowers at the feet of certain little years that are dead and may not come again.”</p>
-			<p>He answered me: “These <i>are</i> the years that are dead, alone the immortals; all years to be are Their children⁠—They fashioned their smiles and their laughter; all earthly kings They have crowned, all gods They have created; all the events to be flow down from their feet like a river, the worlds are flying pebbles that They have already thrown, and Time and all his centuries behind him kneel there with bended crests in token of vassalage at Their potent feet.”</p>
+			<p>He answered me: “These <em>are</em> the years that are dead, alone the immortals; all years to be are Their children⁠—They fashioned their smiles and their laughter; all earthly kings They have crowned, all gods They have created; all the events to be flow down from their feet like a river, the worlds are flying pebbles that They have already thrown, and Time and all his centuries behind him kneel there with bended crests in token of vassalage at Their potent feet.”</p>
 			<p>And when I heard this I turned away with my wreath, and went back to my own land comforted.</p>
-		</section>
+		</article>
 	</body>
 </html>
