--- a/src/epub/text/compromise.xhtml
+++ b/src/epub/text/compromise.xhtml
@@ -6,12 +6,12 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="compromise" epub:type="se:short-story">
+		<article id="compromise" epub:type="se:short-story">
 			<h2 epub:type="title">Compromise</h2>
 			<p>They built their gorgeous home, their city of glory, above the lair of the earthquake. They built it of marble and gold in the shining youth of the world. There they feasted and fought and called their city immortal, and danced and sang songs to the gods. None heeded the earthquake in all those joyous streets. And down in the deeps of the earth, on the black feet of the abyss, they that would conquer Man mumbled long in the darkness, mumbled and goaded the earthquake to try his strength with that city, to go forth blithely at night and to gnaw its pillars like bones. And down in those grimy deeps the earthquake answered them, and would not do their pleasure and would not stir from thence, for who knew who they were who danced all day where he rumbled, and what if the lords of that city that had no fear of his anger were haply even the gods!</p>
 			<p>And the centuries plodded by, on and on round the world, and one day they that had danced, they that had sung in that city, remembered the lair of the earthquake in the deeps down under their feet, and made plans one with another and sought to avert the danger, sought to appease the earthquake and turn his anger away.</p>
 			<p>They sent down singing girls, and priests with oats and wine, they sent down garlands and propitious berries, down by dark steps to the black depths of the earth, they sent peacocks newly slain, and boys with burning spices, and their thin white sacred cats with collars of pearls all newly drawn from sea, they sent huge diamonds down in coffers of teak, and ointment and strange oriental dyes, arrows and armor and the rings of their queen.</p>
 			<p>“Oho,” said the earthquake in the coolth of the earth, “so they are not the gods.”</p>
-		</section>
+		</article>
 	</body>
 </html>
