--- a/src/epub/text/death-and-odysseus.xhtml
+++ b/src/epub/text/death-and-odysseus.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="death-and-odysseus" epub:type="se:short-story">
+		<article id="death-and-odysseus" epub:type="se:short-story">
 			<h2 epub:type="title">Death and Odysseus</h2>
 			<p>In the Olympian courts Love laughed at Death, because he was unsightly, and because She couldn’t help it, and because he never did anything worth doing, and because She would.</p>
 			<p>And Death hated being laughed at, and used to brood apart thinking only of his wrongs and of what he could do to end this intolerable treatment.</p>
@@ -18,6 +18,6 @@
 			<p>Then Death came close and began to mouth at him. And after a while Odysseus turned and spoke. And “Well, old servant,” he said, “have your masters been kind to you since I made you work for me round Ilion?”</p>
 			<p>And Death for some while stood mute, for he thought of the laughter of Love.</p>
 			<p>Then “Come now,” said Odysseus, “lend me your shoulder,” and he leaning heavily on that bony joint, they went together through the open door.</p>
-		</section>
+		</article>
 	</body>
 </html>
