--- a/src/epub/text/the-death-of-pan.xhtml
+++ b/src/epub/text/the-death-of-pan.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-death-of-pan" epub:type="se:short-story">
+		<article id="the-death-of-pan" epub:type="se:short-story">
 			<h2 epub:type="title">The Death of Pan</h2>
 			<p>When the travellers from London entered Arcady they lamented one to another the death of Pan.</p>
 			<p>And anon they saw him lying stiff and still.</p>
@@ -17,6 +17,6 @@
 			<p>And, when they saw there, suddenly in the twilight, that old recumbent god, they stopped in their running and whispered among themselves. “How silly he looks,” they said, and thereat they laughed a little.</p>
 			<p>And at the sound of their laughter Pan leaped up and the gravel flew from his hooves.</p>
 			<p>And, for as long as the travellers stood and listened, the crags and the hilltops of Arcady rang with the sounds of pursuit.</p>
-		</section>
+		</article>
 	</body>
 </html>
