--- a/src/epub/text/the-food-of-death.xhtml
+++ b/src/epub/text/the-food-of-death.xhtml
@@ -6,10 +6,10 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-food-of-death" epub:type="se:short-story">
+		<article id="the-food-of-death" epub:type="se:short-story">
 			<h2 epub:type="title">The Food of Death</h2>
 			<p>Death was sick. But they brought him bread that the modern bakers make, whitened with alum, and the tinned meats of Chicago, with a pinch of our modern substitute for salt. They carried him into the dining-room of a great hotel (in that close atmosphere Death breathed more freely), and there they gave him their cheap Indian tea. They brought him a bottle of wine that they called champagne. Death drank it up. They brought a newspaper and looked up the patent medicines; they gave him the foods that it recommended for invalids, and a little medicine as prescribed in the paper. They gave him some milk and borax, such as children drink in England.</p>
 			<p>Death arose ravening, strong, and strode again through the cities.</p>
-		</section>
+		</article>
 	</body>
 </html>
