--- a/src/epub/text/the-return-of-song.xhtml
+++ b/src/epub/text/the-return-of-song.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-return-of-song" epub:type="se:short-story">
+		<article id="the-return-of-song" epub:type="se:short-story">
 			<h2 epub:type="title">The Return of Song</h2>
 			<p>“The swans are singing again,” said to one another the gods. And looking downwards, for my dreams had taken me to some fair and far Valhalla, I saw below me an iridescent bubble not greatly larger than a star shine beautifully but faintly, and up and up from it looking larger and larger came a flock of white, innumerable swans, singing and singing and singing, till it seemed as though even the gods were wild ships swimming in music.</p>
 			<p>“What is it?” I said to one that was humble among the gods.</p>
@@ -15,6 +15,6 @@
 			<p>“Dead,” said he that was humble among the gods. “The worlds are not forever; only song is immortal.”</p>
 			<p>“Look! Look!” he said. “There will be a new one soon.”</p>
 			<p>And I looked and saw the larks, going down from the gods.</p>
-		</section>
+		</article>
 	</body>
 </html>
