--- a/src/epub/text/the-songless-country.xhtml
+++ b/src/epub/text/the-songless-country.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-songless-country" epub:type="se:short-story">
+		<article id="the-songless-country" epub:type="se:short-story">
 			<h2 epub:type="title">The Songless Country</h2>
 			<p>The poet came unto a great country in which there were no songs. And he lamented gently for the nation that had not any little foolish songs to sing to itself at evening.</p>
 			<p>And at last he said: “I will make for them myself some little foolish songs so that they may be merry in the lanes and happy by the fireside.” And for some days he made for them aimless songs such as maidens sing on the hills in the older happier countries.</p>
@@ -14,6 +14,6 @@
 			<p>And they said to him:</p>
 			<p>“If you think we have time for that sort of nonsense nowadays you cannot know much of the progress of modern commerce.”</p>
 			<p>And then the poet wept for he said: “Alas! They are damned.”</p>
-		</section>
+		</article>
 	</body>
 </html>
