--- a/src/epub/text/the-tomb-of-pan.xhtml
+++ b/src/epub/text/the-tomb-of-pan.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-tomb-of-pan" epub:type="se:short-story">
+		<article id="the-tomb-of-pan" epub:type="se:short-story">
 			<h2 epub:type="title">The Tomb of Pan</h2>
 			<p>“Seeing,” they said, “that old-time Pan is dead, let us now make a tomb for him and a monument, that the dreadful worship of long ago may be remembered and avoided by all.”</p>
 			<p>So said the people of the enlightened lands. And they built a white and mighty tomb of marble. Slowly it rose under the hands of the builders and longer every evening after sunset it gleamed with rays of the departed sun.</p>
@@ -14,6 +14,6 @@
 			<p>And one day all was finished, and the tomb stood there like a steep sea-cliff. And Pan was carved thereon with humbled head and the feet of angels pressed upon his neck. And when the tomb was finished the sun had already set, but the afterglow was rosy on the huge bulk of Pan.</p>
 			<p>And presently all the enlightened people came, and saw the tomb and remembered Pan who was dead, and all deplored him and his wicked age. But a few wept apart because of the death of Pan.</p>
 			<p>But at evening as he stole out of the forest, and slipped like a shadow softly along the hills, Pan saw the tomb and laughed.</p>
-		</section>
+		</article>
 	</body>
 </html>
