--- a/src/epub/text/the-trouble-in-leafy-green-street.xhtml
+++ b/src/epub/text/the-trouble-in-leafy-green-street.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-trouble-in-leafy-green-street" epub:type="se:short-story">
+		<article id="the-trouble-in-leafy-green-street" epub:type="se:short-story">
 			<h2 epub:type="title">The Trouble in Leafy Green Street</h2>
 			<p>She went to the idol-shop in Moleshill Street, where the old man mumbles, and said: “I want a god to worship when it is wet.”</p>
 			<p>The old man reminded her of the heavy penalties that rightly attach to idolatry and, when he had enumerated all, she answered him as was meet: “Give me a god to worship when it is wet.”</p>
@@ -14,6 +14,6 @@
 			<p>Now it may be that long confinement to the house affects adversely the liver, or these things may be of the soul, but certain it is that on a rainy day her spirits so far descended that those cheerful creatures came within sight of the Pit, and, having tried cigarettes to no good end, she bethought her of Moleshill Street and the mumbling man.</p>
 			<p>He brought the grey idol forth and mumbled of guarantees, although he put nothing on paper, and she paid him there and then his preposterous price and took the idol away.</p>
 			<p>And on the next wet day that there ever was she prayed to the grey-stone idol that she had bought, the God of Rainy Cheerfulness (who knows with what ceremony or what lack of it?), and so brought down on her in Leafy Green Street, in the preposterous house at the corner, that doom of which all men speak.</p>
-		</section>
+		</article>
 	</body>
 </html>
