--- a/src/epub/text/the-workman.xhtml
+++ b/src/epub/text/the-workman.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-workman" epub:type="se:short-story">
+		<article id="the-workman" epub:type="se:short-story">
 			<h2 epub:type="title">The Workman</h2>
 			<p>I saw a workman fall with his scaffolding right from the summit of some vast hotel. And as he came down I saw him holding a knife and trying to cut his name on the scaffolding. He had time to try and do this for he must have had nearly three hundred feet to fall. And I could think of nothing but his folly in doing this futile thing, for not only would the man be unrecognizably dead in three seconds, but the very pole on which he tried to scratch whatever of his name he had time for was certain to be burnt in a few weeks for firewood.</p>
 			<p>Then I went home for I had work to do. And all that evening I thought of the man’s folly, till the thought hindered me from serious work.</p>
@@ -16,6 +16,6 @@
 			<p>“And why,” I asked, “do you laugh at serious work?”</p>
 			<p>“Why, yer bloomin’ life ’ull go by like a wind,” he said, “and yer ’ole silly civilization ’ull be tidied up in a few centuries.”</p>
 			<p>Then he fell to laughing again and this time audibly; and, laughing still, faded back through the wall again and into the eternity from which he had come.</p>
-		</section>
+		</article>
 	</body>
 </html>
