--- a/src/epub/text/the-worm-and-the-angel.xhtml
+++ b/src/epub/text/the-worm-and-the-angel.xhtml
@@ -6,13 +6,13 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-worm-and-the-angel" epub:type="se:short-story">
+		<article id="the-worm-and-the-angel" epub:type="se:short-story">
 			<h2 epub:type="title">The Worm and the Angel</h2>
 			<p>As he crawled from the tombs of the fallen a worm met with an angel.</p>
 			<p>And together they looked upon the kings and kingdoms, and youths and maidens and the cities of men. They saw the old men heavy in their chairs and heard the children singing in the fields. They saw far wars and warriors and walled towns, wisdom and wickedness, and the pomp of kings, and the people of all the lands that the sunlight knew.</p>
 			<p>And the worm spake to the angel saying: “Behold my food.”</p>
 			<p>“Be dakeon para Thina poluphloisboio Thalassaes,” murmured the angel, for they walked by the sea, “and can you destroy that too?”</p>
 			<p>And the worm paled in his anger to a greyness ill to behold, for for three thousand years he had tried to destroy that line and still its melody was ringing in his head.</p>
-		</section>
+		</article>
 	</body>
 </html>
